Fix popover button poor contrast on light theme

--- a/app/static/css/summernote_theme.css
+++ b/app/static/css/summernote_theme.css
@@ -172,3 +172,11 @@
 .note-modal-backdrop {
   top: 54px;
 }
+
+.popover-content .note-btn {
+  color: var(--darker_red);
+}
+
+.popover-content .note-btn:hover {
+  color: var(--bright_red);
+}
